[package]
name = "kernel"
version = "0.1.0"

[lib]
name = "kernel"
path = "kernel/lib.rs"
crate-type = ["staticlib"]

[dependencies.intrusive-collections]
version = "0.6.4"
default-features = false
features = [ "nightly" ]

[dependencies.rlibc]
version = "1.0.0"

[dependencies.xmas-elf]
version = "0.5"
