[package]
name = "manticore"
version = "0.1.0"
edition = "2021"

[lib]
name = "manticore"
path = "manticore.rs"
crate-type = ["staticlib"]

[dependencies]
kernel = { path = "kernel" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
pci = { path = "drivers/pci" }
virtio = { path = "drivers/virtio" }
