[package]
name = "virtio"
version = "0.1.0"

[lib]
name = "virtio"
path = "lib.rs"

[dependencies]
bitflags = { version = "1.3.2" }
intrusive-collections = { version = "0.9.2", default-features = false, features = [ "nightly", "alloc" ]}
kernel = { path = "../../kernel" }
pci = { path = "../pci" }
rlibc = { version = "1.0.0" }
